--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,6 +19,9 @@
 </head>
 
 <body>
+  <div id="fb-root"></div>
+  <script async defer crossorigin="anonymous"
+    src="https://connect.facebook.net/th_TH/sdk.js#xfbml=1&version=v3.3"></script>
   <div class="container">
     <img class="w-100"
       src="https://www.cmru.ac.th/assets/images/banners/th/11-07-2019/d92f83d82753fb0f1b36e635b964dc6e73f0e7ca.jpg"
@@ -132,7 +135,48 @@
       <div class="col-3">
         <h4 class="mt-3"> เจ้าอาวาสวัด</h4>
         <img class="w-100" src="//via.placeholder.com/480x500" alt="pt">
+        <div class="fb-page mt-3" data-href="https://www.facebook.com/cmrufans" data-tabs="" data-width=""
+          data-height="" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false"
+          data-show-facepile="true">
+          <blockquote cite="https://www.facebook.com/cmrufans" class="fb-xfbml-parse-ignore"><a
+              href="https://www.facebook.com/cmrufans">Chiangmai Rajabhat University</a></blockquote>
+        </div>
+        <a target="_blank" href="http://www.cmru.ac.th"
+          title="มหาวิทยาลัยราชภัฏเชียงใหม่ : Chiang Mai Rajabhat University - สถาบันอุดมศึกษาเพื่อพัฒนาท้องถิ่น"><img
+            src="https://www.cmru.ac.th/assets/images/link/exchange/300_250.jpg" class="w-100 mt-3"
+            alt="มหาวิทยาลัยราชภัฏเชียงใหม่"></a>
       </div>
+    </div>
+    <div class="footer border bg-light mb-5">
+      <div class="row p-4">
+        <div class="col-4">
+          <h4>ลิงค์ด่วน</h4>
+          <ul>
+            <li><a href="#">หน้าหลัก</a></li>
+            <li><a href="#">ทดสอบ</a></li>
+            <li><a href="#">ทดสอบ</a></li>
+            <li><a href="#">ทดสอบ</a></li>
+          </ul>
+        </div>
+        <div class="col-4">
+          <h4>ลิงค์น่าสนใจ</h4>
+          <ul>
+            <li><a href="#">หน้าหลัก</a></li>
+            <li><a href="#">ทดสอบ</a></li>
+            <li><a href="#">ทดสอบ</a></li>
+            <li><a href="#">ทดสอบ</a></li>
+          </ul>
+        </div>
+        <div class="col-4">
+          <i class="fab fa-atlassian fa-4x"></i>
+          <address>
+            <strong>วัดนานา</strong>
+            191 หมู่ 8 ต.นานา อ.เมือง จ.นานาแลน
+            <p>โทร 053124578 ,โทรสาร 15546</p>
+          </address>
+        </div>
+      </div>
+      <p class="p-3">&copy; สงวนสิทธิ์ 2019, นาย ธรรมนูญ บุญใหม่</p>
     </div>
   </div>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
